--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM centos:8 AS virtio-base-image
 RUN mkdir /build
 
 # renovate: datasource=repology depName=centos_8/virtio-win versioning=loose
-ENV VIRTIO_WIN_VERSION="1.9.16-2.el8"
+ENV VIRTIO_WIN_VERSION="1.9.17"
 RUN --mount=type=cache,target=/download/cache \
     --mount=type=cache,target=/var/cache/yum \
     --mount=type=tmpfs,target=/download/extract \
