--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,21 @@
 #syntax=docker/dockerfile:1.2
 
-FROM centos:8 AS virtio-base-image
+FROM rockylinux/rockylinux:latest AS virtio-downloader
 
 RUN mkdir /build
 
-# renovate: datasource=repology depName=centos_8/virtio-win versioning=loose
-ENV VIRTIO_WIN_VERSION="1.9.17-4.el8_4"
-RUN --mount=type=cache,target=/download/cache \
-    --mount=type=cache,target=/var/cache/yum \
-    --mount=type=tmpfs,target=/download/extract \
-    dnf install -y \
-    --downloadonly \
-    --downloaddir=/download/cache/ \
-    virtio-win-"${VIRTIO_WIN_VERSION}" \
-    && cd /download/extract \
-    && rpm2cpio "/download/cache/virtio-win-${VIRTIO_WIN_VERSION}.noarch.rpm" | cpio -idmv \
-    && echo "$VIRTIO_WIN_VERSION" > /build/VERSION.txt \
-    && cp /download/extract/usr/share/virtio-win/virtio-win.iso /build/virtio-win.iso
+# renovate: datasource=repology depName=rocky_8/virtio-win versioning=loose
+ENV VIRTIO_WIN_VERSION="1.9.19-1.el8"
+
+# Install virtio-win and copy virtio-win.iso and uninstall it
+RUN --mount=type=cache,target=/var/cache/yum \
+    dnf install -y virtio-win-${VIRTIO_WIN_VERSION} \
+    && mkdir /opt/virtio \
+    && cp /usr/share/virtio-win/virtio-win.iso /opt/virtio/virtio-win.iso \
+    && dnf remove -y virtio-win
+
+RUN echo "$VIRTIO_WIN_VERSION" > /opt/virtio/VERSION.txt
 
 # Copy from build/extract statge
 FROM scratch AS export-stage
-COPY --from=virtio-base-image /build/ /
+COPY --from=virtio-downloader /opt/virtio/ /
