feat: Update to 1.9.24-2.el8_5

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,10 @@ updates:
   # Actions
   - package-ecosystem: github-actions
     labels:
-      - "Actor:Dependabot"
-      - "Deps:Actions"
+      - "dependabot"
+      - "dependencies"
+      - "github-action"
+      - "luna/autoupdate"
     commit-message:
       prefix: "ci(deps):"
     directory: "/"
