--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,20 @@
-#syntax=docker/dockerfile:1.2
+FROM rockylinux/rockylinux:8.5 AS downloader
 
-FROM rockylinux/rockylinux:latest AS virtio-downloader
-
-RUN mkdir /build
-
-# renovate: datasource=repology depName=rocky_8/virtio-win versioning=loose
-ENV VIRTIO_WIN_VERSION="1.9.19-1.el8"
-
-# Install virtio-win and copy virtio-win.iso and uninstall it
-RUN --mount=type=cache,target=/var/cache/yum \
-    dnf install -y virtio-win-${VIRTIO_WIN_VERSION} \
-    && mkdir /opt/virtio \
-    && cp /usr/share/virtio-win/virtio-win.iso /opt/virtio/virtio-win.iso \
-    && dnf remove -y virtio-win
-
-RUN echo "$VIRTIO_WIN_VERSION" > /opt/virtio/VERSION.txt
+# Install virtio-win package
+RUN --mount=type=cache,target=/var/cache/dnf \
+    dnf install \
+        --setopt=keepcache=true \
+        --assumeyes \
+        --best \
+        virtio-win \
+    && dnf repoquery \
+        --quiet \
+        --installed \
+        --cacheonly \
+        --qf '%{version}-%{release}' \
+        virtio-win > /usr/share/virtio-win/VERSION.txt
 
 # Copy from build/extract statge
 FROM scratch AS export-stage
-COPY --from=virtio-downloader /opt/virtio/ /
+COPY --from=downloader /usr/share/virtio-win/virtio-win.iso /virtio-win.iso
+COPY --from=downloader /usr/share/virtio-win/VERSION.txt /VERSION.txt
