--- a/.editorconfig
+++ b/.editorconfig
@@ -28,5 +28,12 @@ indent_size = 4
 [Dockerfile]
 indent_size = 4
 
-# diana:{diana_urn_flavor}:{remote}:{source}:{version}:{remote_path}:{type}
-# diana:2:github:tprasadtp/templates::core/.editorconfig:static
+# PowerShell
+[*.ps1]
+end_of_line = crlf
+indent_size = 4
+
+# Batch
+[*.cmd]
+end_of_line = crlf
+indent_size = 4
