--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
       run:
         shell: powershell
     needs:
-      - extract
+      - build
     steps:
       - uses: actions/checkout@v3
 
@@ -113,7 +113,7 @@ jobs:
     permissions:
       contents: write
     needs:
-      - extract
+      - build
       - verify
     steps:
       - uses: actions/checkout@v3
