--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - "**"
   pull_request:
+    branches:
+      - main
+      - master
   schedule:
     # Every Saturday at 18:15
     - cron: "18 15 * * 6"
@@ -14,14 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build
-        run: ./scripts/ci-build-docker.sh
-
-      - name: Mount and Extract
+      - name: Install
         run: |
           sudo apt-get install -y genisoimage
 
-      - name: Mount and Extract
+      - name: Build
+        run: make build
+
+      - name: Mount ISO
         run: |
           echo "--> Prepare ISO"
           sudo mkdir /mnt/virtio-iso
@@ -29,8 +32,9 @@ jobs:
           sudo chmod 755 /mnt/virtio-iso
           echo "--> Mounting ISO"
           sudo mount -o loop docker/build/virtio-win.iso /mnt/virtio-iso
-          echo "--> Copy Files"
-          ./scripts/ci-copy-files.sh /mnt/virtio-iso
+
+      - name: Copy files and generate Win-PE ISOs
+        run: ./scripts/ci-copy-files.sh /mnt/virtio-iso
 
       - name: Upload virtio-win.iso
         uses: actions/upload-artifact@v3
@@ -101,21 +105,8 @@ jobs:
         with:
           name: virtio-win.iso
 
-      - name: Mount VIRTIO ISO
-        run: |
-          Write-Host "Mounting VIRTIO Image"
-          Mount-DiskImage -StorageType ISO -ImagePath ${env:GITHUB_WORKSPACE}\virtio-win.iso
-          Get-DiskImage ${env:GITHUB_WORKSPACE}\virtio-win.iso | Get-Volume
-
-      - name: Get VIRTIO Mountpoint
-        run: |
-          Write-Host "Export Drive Letter"
-          $IsoMountDriveLetter = (Get-DiskImage ${env:GITHUB_WORKSPACE}\virtio-win.iso | Get-Volume).DriveLetter
-          echo "VIRTIO_ISO_MNT=$IsoMountDriveLetter" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
-      - name: Verify VIRTIO Signatures
-        run: .\scripts\verify.ps1 -BasePath ${env:VIRTIO_ISO_MNT}:\
-
+      - name: Verify
+        run: .\scripts\verify.ps1 -Path ${env:GITHUB_WORKSPACE}\virtio-win.iso
 
   # Release if
   # 1. Latest tag on GitHub differs from extracted version
